- added validation messages to prevent bad data